<resources>
    <string name="app_name">What should I eat?</string>
    <string name="action_settings">Settings</string>
    <string name="view_directions_on_website">View directions on website</string>
    <string name="add_your_ingredients">Add your ingredients</string>
    <string name="groceries">groceries</string>
    <string name="ingredients">ingredients</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="contains_the_image_of_the_recipe">Contains the image of the recipe</string>
    <string name="SigninMessage">Hungry? Let\'s get started.</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="failed_login">Login failed.</string>
    <string name="signed_out_message">Successfully signed out.</string>
    <string name="hungry_and_have_food_in_the_fridge_lying_around_but_have_no_inspiration_what_to_do_with_it">Hungry and have food in the fridge lying around, but have no inspiration what to do with it?</string>
    <string name="what_should_i_eat">What Should I Eat? </string>
    <string name="solves_that_problem_for_you"> solves that problem for you.</string>
    <string name="you_can_deselect_an_ingredient_by_tapping_it_once_and_it_will_not_be_required_in_the_recipes_you_search_for_it_can_be_selected_again_by_tapping_it_once_again_by_long_pressing_an_ingredient_it_will_be_removed">You can deselect an ingredient by tapping it once and it will not be required in the recipes you search for. It can be selected again by tapping it once again. By long pressing an ingredient it will be removed.</string>
    <string name="adding_ingredients">Adding ingredients</string>
    <string name="you_only_have_to_add_the_ingredients_you_have_to_your_ingredients_list_and_search_for_recipes_to_make_with_them">You only have to add the ingredients you have to your ingredients list and search for recipes to make with them.</string>
    <string name="recipes">Recipes</string>
    <string name="allergies_and_diets">Allergies and diets</string>
    <string name="by_tapping_on_a_recipe_you_get_to_see_all_it_s_ingredients_there_may_be_some_ingredients_necessary_in_order_to_make_this_recipe_but_you_may_not_have_them_at_home_yet_simply_tap_on_an_ingredient_to_add_them_to_your_grocery_list">By tapping on a recipe you get to see all it\'s ingredients. There may be some ingredients necessary in order to make this recipe, but you may not have them at home yet. Simply tap on an ingredient to add them to your grocery list.</string>
    <string name="you_can_specify_your_preferences_for_allergies_and_diets_in_the_menu_to_make_sure_you_don_t_have_to_read_recipes_that_you_wouldn_t_make">You can specify your preferences for allergies and diets in the menu to make sure you don\'t have to read recipes that you wouldn\'t make.</string>
</resources>
